--- a/src/app/pages/danger-zone/danger-zone.page.html
+++ b/src/app/pages/danger-zone/danger-zone.page.html
@@ -15,9 +15,11 @@
       <ion-icon name="warning" slot="start"></ion-icon>
       {{ 'danger-zone.wipe_label' | translate }}
     </ion-item>
-    <ion-item (click)="loadModule()">
+
+    <!-- disable module side-loading until it's production ready -->
+    <!-- <ion-item (click)="loadModule()">
       <ion-icon name="warning" slot="start"></ion-icon>
       {{ 'danger-zone.load-module_label' | translate }}
-    </ion-item>
+    </ion-item> -->
   </ion-list>
 </ion-content>
