--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -98,6 +98,10 @@ airgap-interaction-selection-settings,
 airgap-languages-selection-settings,
 airgap-deserialized-detail,
 airgap-transaction-signed,
+airgap-contact-book-contacts,
+airgap-contact-book-contacts-detail,
+airgap-contact-book-onboarding,
+airgap-contact-book-settings,
 airgap-secret-generate-onboarding,
 airgap-social-recovery-setup,
 airgap-secret-generate,
