--- a/src/app/pages/contact-book-contacts-detail/contact-book-contacts-detail.page.scss
+++ b/src/app/pages/contact-book-contacts-detail/contact-book-contacts-detail.page.scss
@@ -1,3 +1,32 @@
 ion-content {
   --padding-bottom: var(--ion-padding, 64px);
 }
+
+ion-item {
+  margin-bottom: 12px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+ion-list {
+  width: 100%;
+}
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+    .image {
+      width: 80px;
+      height: 80px;
+      background-color: pink;
+      border-radius: 100%;
+    }
+  }
+}
