--- a/src/app/pages/contact-book-contacts/contact-book-contacts.page.scss
+++ b/src/app/pages/contact-book-contacts/contact-book-contacts.page.scss
@@ -20,3 +20,16 @@ ion-toolbar {
     margin: 24px 0px 0px 0px;
   }
 }
+
+.suggestions-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  margin-top: 12px;
+
+  .suggestions-header {
+    font-size: 1rem;
+    margin-bottom: 0px;
+    font-weight: 800;
+  }
+}
