--- a/src/app/pages/contact-book-contacts/contact-book-contacts.page.html
+++ b/src/app/pages/contact-book-contacts/contact-book-contacts.page.html
@@ -12,7 +12,7 @@
   </ion-toolbar>
 
   <ion-toolbar color="secondary">
-    <ion-searchbar placeholder="{{ 'tab-secrets.search_placeholder' | translate }}" (ionInput)="onSearch($event)"></ion-searchbar>
+    <ion-searchbar placeholder="Search contacts" (ionInput)="onSearch($event)"></ion-searchbar>
     <ion-buttons slot="primary" (click)="onClickSort($event)">
       <ion-button>
         <ion-icon slot="icon-only" name="funnel"></ion-icon>
