--- a/src/app/pages/contact-book-contacts/contact-book-contacts-item/contact-book-contacts-item.component.scss
+++ b/src/app/pages/contact-book-contacts/contact-book-contacts-item/contact-book-contacts-item.component.scss
@@ -2,6 +2,15 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  cursor: pointer;
+  transition: all ease 0.2s;
+  padding: 6px 12px;
+  margin: -6px -12px;
+  border-radius: 6px;
+
+  &:hover {
+    background-color: rgba(128, 128, 128, 0.322);
+  }
 
   .contact-image-wrapper {
     height: 35px;
@@ -19,6 +28,7 @@
     flex: 1;
     .contact-name {
       margin: 0px;
+      font-weight: 700;
     }
 
     .contact-address {
@@ -27,6 +37,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+      color: rgb(153, 153, 153);
     }
   }
 
@@ -37,6 +48,8 @@
 
     .contact-date {
       margin: 0px;
+      color: rgb(153, 153, 153);
+      margin-bottom: 4px;
     }
   }
 }
