--- a/src/app/pages/contact-book-settings/contact-book-settings.page.html
+++ b/src/app/pages/contact-book-settings/contact-book-settings.page.html
@@ -3,10 +3,20 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/secret-setup"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ 'contact-book-onboarding.title' | translate }}</ion-title>
+    <ion-title>{{ 'contact-book.title_settings' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <p>Contact Book Onboarding Page</p>
+  <ion-list no-border lines="none">
+    <ion-item>
+      {{ 'contact-book.label_enable_address_book' | translate }}
+      <ion-toggle [checked]="bookEnabled" (ionChange)="toggleAddressBook($event)" slot="end"></ion-toggle>
+    </ion-item>
+    <ion-item>
+      {{ 'contact-book.label_enable_suggestions' | translate }}
+      <ion-toggle [checked]="suggestionsEnabled" (ionChange)="toggleEnableSuggestions($event)" slot="end"></ion-toggle>
+    </ion-item>
+    <button class="delete-button" expand="block" (click)="onClickDelete()">{{ 'contact-book.button_delete_entries' | translate }}</button>
+  </ion-list>
 </ion-content>
