--- a/src/app/pages/contact-book-contacts/contact-book-contacts-suggestion/contact-book-contacts-suggestion.component.html
+++ b/src/app/pages/contact-book-contacts/contact-book-contacts-suggestion/contact-book-contacts-suggestion.component.html
@@ -4,7 +4,7 @@
     <p class="suggestion-address">{{ address }}</p>
   </div>
   <div class="suggestion-actions">
-    <button (click)="onClickAddHandler()">Add</button>
-    <button (click)="onClickCloseHandler()">Close</button>
+    <button (click)="onClickAddHandler()">{{ 'contact-book.label_add' | translate }}</button>
+    <button (click)="onClickCloseHandler()">{{ 'contact-book.label_close' | translate }}</button>
   </div>
 </div>
