--- a/src/app/pages/contact-book-contacts/contact-book-contacts-popover/contact-book-contacts-popover.component.html
+++ b/src/app/pages/contact-book-contacts/contact-book-contacts-popover/contact-book-contacts-popover.component.html
@@ -1,6 +1,6 @@
 <ion-list lines="none" class="ion-no-padding ion-no-margin">
   <ion-list-header>
-    <ion-label>Sort by</ion-label>
+    <ion-label>{{ 'contact-book.label_sort_by' | translate }}</ion-label>
   </ion-list-header>
   <ion-list lines="none" class="ion-padding-vertical" (ionChange)="changeSort($event.detail.value)">
     <ion-radio-group [(ngModel)]="selectedSortType">
