--- a/src/app/pages/contact-book-onboarding/contact-book-onboarding.page.scss
+++ b/src/app/pages/contact-book-onboarding/contact-book-onboarding.page.scss
@@ -46,7 +46,7 @@ li {
   align-items: center;
   justify-content: space-between;
   border: 2px dashed var(--ion-color-primary);
-  padding: 0px 0px 0px 12px;
+  padding: 12px;
   border-radius: 6px;
   margin: 24px 0px 12px 0px;
   width: 100%;
